--- a/style.css
+++ b/style.css
@@ -34,7 +34,7 @@ LANDING
 	top: 0px;
 	left: -1920px;
 	z-index: 0;
-	background-image: url(images/landing-background.png);
+	background-image: url(images/landing-background.jpg);
 	background-size: cover;
 	background-repeat: no-repeat;
 	background-attachment: fixed;
