--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ LANDING
 #landing-img {
 	width: 512px;
 	height: 512px;
-	background-image: url(images/jw-landing.jpg);
+	background-image: url(images/jw-landing.png);
 	position: absolute;
 	left: calc(50vw - 256px);
 	top: calc(50vh - 256px);
