--- a/style.css
+++ b/style.css
@@ -5,6 +5,7 @@ body {
 	margin: 0 0 0 0;
 	font-family: 'Open Sans', sans-serif;
 	font-size: 14px;
+	overflow-x: hidden;
 }
 
 @font-face {
@@ -22,6 +23,10 @@ h2 {
 	font-size: 18px;
 	line-height 18px;
 	margin-bottom: 0px;
+}
+
+main h2{
+	padding-left: 64px;
 }
 /* ======================
 LANDING
@@ -112,7 +117,7 @@ aside {
 
 #info {
 	width: 100vw;
-	height: 100vh;
+	min-height: 100vh;
 	background-color: #fff;
 	opacity: 0.1;
 	position: fixed;
@@ -120,7 +125,6 @@ aside {
 	left: -100vw;
 	z-index: 8;
 	transition: all 0.2s ease-in-out;
-	overflow-y: scroll;
 }
 
 #info.show {
@@ -151,6 +155,8 @@ aside {
 
 #info table {
 	color: #657d8a;
+	display: inline;
+	max-width: 29vw;
 }
 
 .table-left {
@@ -163,6 +169,10 @@ aside {
 	cursor: pointer;
 }
 
+/* ======================
+PORTFOLIO
+====================== */
+
 #portfolio {
 	position: absolute;
 	height: 100vh;
@@ -172,6 +182,3 @@ aside {
 	background-color: #fff;
 }
 
-main h2{
-	padding-left: 64px;
-}
